@@ -1,3 +1,8 @@
+2011-03-31  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
+	* dwarf2read.c (dwarf2_name): Initialize DEMANGLED.  Avoid demangling
+	struct linkage name twice.
+
 2011-03-31  Tom Tromey  <tromey@redhat.com>
 
 	* python/py-prettyprint.c (print_stack_unless_memory_error): Add
